# Custom-Sytem-Monitor-C-

./: CMakeLists.txt  README.md
Src/CPU_Imp/: dataCollector.cpp
app/: CMakeLists.txt  main.cpp
libs/DataCollector/: CMakeLists.txt  dataCollector.cpp  dataCollector.h  export.h  idataCollector.h
